# LIRmotif-Finder

./: LIR_Motif_Finder.ipynb  README.md  __init__.py  cli.py  conftest.py  core.py  pyproject.toml  test_core.py
